<resources>
    <string name="app_name">ExchangeToys</string>
    <string name="title_home">Your Toys</string>
    <string name="title_dashboard">Toys</string>
    <string name="title_notifications">Settings</string>
    <string name="child_button_name">Dziecko</string>
    <string name="parent_button_name">Rodzic</string>
    <string name="todo">TODO</string>
    <string name="your_child">Your child:</string>
    <string name="toy_action">Rent</string>
    <string name="toy_name">name</string>
    <string name="toy_some_info">some_info</string>
    <string name="your_rented_toys">Your rented toys</string>
    <string name="your_toys">Your toys</string>
    <string name="register">Register</string>
    <!--To spinner category-->
    <string name="category_prompt">Choose a category</string>
    <string name="age_prompt">Age Range</string>
    <string name="tag_prompt">Tags</string>
    <string name="channel_name">test</string>
    <string name="channel_description">opis testu asdasdasd</string>


</resources>
