<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_weight="1"
        android:text="TextView" />

    <ImageButton
        android:id="@+id/parent_button"
        android:layout_width="match_parent"
        android:layout_height="583dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:text="@string/parent_button_name" />

    <ImageButton
        android:id="@+id/child_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="TODO"
        android:scaleType="fitCenter"
        android:text="@string/child_button_name" />
</LinearLayout>