<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_light"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Search...(any keyword)" />

        <EditText
            android:id="@+id/any_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/category_prompt" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:entries="@array/spinner_category"
            android:prompt="@string/category_prompt"
            android:spinnerMode="dialog" />

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/age_prompt" />

        <Spinner
            android:id="@+id/age_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:entries="@array/age_category"
            android:prompt="@string/age_prompt"
            android:spinnerMode="dialog" />
        <!--tags-->
        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tag_prompt" />

        <Spinner
            android:id="@+id/tag_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:entries="@array/tag_category"
            android:prompt="@string/tag_prompt"
            android:spinnerMode="dialog" />

        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/is_didactic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Is didactic" />

        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/is_vintage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Is vintage" />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/confirm_filtr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Filtr" />


    </LinearLayout>
</ScrollView>