<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_light"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Search...(any keyword)" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxAnyKeyword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/any_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/category_prompt" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxCategorySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/spinner_category"
                android:prompt="@string/category_prompt"
                android:spinnerMode="dialog" />
        </LinearLayout>
        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/age_prompt" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxAgeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Spinner
                android:id="@+id/age_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/age_category"
                android:prompt="@string/age_prompt"
                android:spinnerMode="dialog" />
        </LinearLayout>
        <!--tags-->
        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tag_prompt" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxTagSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Spinner
                android:id="@+id/tag_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/tag_category"
                android:prompt="@string/tag_prompt"
                android:spinnerMode="dialog" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:layout_marginTop="10dp"
                android:id="@+id/checkBoxDidactic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <CheckBox
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:id="@+id/is_didactic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Is didactic" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:layout_marginTop="10dp"
                android:id="@+id/checkBoxVintage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <CheckBox
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:id="@+id/is_vintage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Is vintage" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:layout_marginTop="10dp"
                android:id="@+id/checkBoxRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose radius of area to display toys (in km)(0-1000)" />


        </LinearLayout>
        <SeekBar
            android:id="@+id/seekBarRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="1000" />

        <TextView
            android:id="@+id/radius_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />
        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/confirm_filtr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Filtr" />


    </LinearLayout>
</ScrollView>