<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backTransparency"
        android:orientation="vertical"
     >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="Search...(any keyword)"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >

            <CheckBox
                android:id="@+id/checkBoxAnyKeyword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/any_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/category_prompt"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <CheckBox
                android:id="@+id/checkBoxCategorySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/spinner_category"
                android:prompt="@string/category_prompt"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/age_prompt"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <CheckBox
                android:id="@+id/checkBoxAgeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/age_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/age_category"
                android:prompt="@string/age_prompt"
                android:spinnerMode="dialog" />
        </LinearLayout>
        <!--tags-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/tag_prompt"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <CheckBox
                android:id="@+id/checkBoxTagSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/tag_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/tag_category"
                android:prompt="@string/tag_prompt"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <CheckBox
                android:id="@+id/checkBoxDidactic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <CheckBox
                android:id="@+id/is_didactic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="Is didactic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <CheckBox
                android:id="@+id/checkBoxVintage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <CheckBox
                android:id="@+id/is_vintage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="Is vintage" />
        </LinearLayout>

        <Button
            android:id="@+id/confirm_filtr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_blue_light"
            android:fontFamily="casual"
            android:text="Filtr"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>
</ScrollView>